chore: structuring project

--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
   <title>Koumoul</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="/favicon.ico?v=4" />
 
   <!-- Use webpack css loader or we don't care ? -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
-<body ng-app="app">
-  <div id="app"></div>
-  <script src="./node_modules/vue/dist/vue.js"></script>
-
+<body>
+  <div id="app">
+  </div>
+  <script src="./bundle.js"></script>
 </body>
 
 </html>
