design: work on flex layout

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,12 @@
   <!-- Use webpack css loader or we don't care ? -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  <style>
+    html, body {
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
